# RLM

./: CHANGELOG.md  README.md  VERSION_STAGE.md  pyproject.toml
.github/actions/auto-versioning/: action.yml
.github/actions/unit-tests/: action.yml
.github/workflows/: cicd-lowers.yml  test-versioning.yml  versioning.yml
scripts/: calculate-version.sh
src/normalizers/: StringNormalizer.py
tests/: test-versioning.sh
tests/normalizers/: StringNormalizerTests.py
