[project]
name = "rlm"
version = "1.0.0"
dependencies = [
    "torch>=2.2.0",
    "pandas",
    "numpy",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]

branch = "main"

upload_to_repository = false

build_command = ""
major_on_zero = false